# lecture-ai-engineering

./: .gitignore  pyproject.toml
day1_local/: day1_practice.ipynb
day1_local/02_streamlit_app/: ui.py
