[project]
name = "lecture-ai-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "fastapi>=0.115.12",
    "janome>=0.5.0",
    "nltk>=3.9.1",
    "protobuf>=5.29.4",
    "pyngrok>=7.2.4",
    "scikit-learn>=1.6.1",
    "sentencepiece>=0.2.0",
    "streamlit>=1.44.1",
    "torch>=2.6.0",
    "transformers>=4.51.3",
    "uvicorn>=0.34.2",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    {index = "pytorch-cu126"}
]
